FIX Mission map editor tokens list was overlapping the material list

--- a/tickleman/zombiciderocks/skins/zombicide/mission-token-widget.scss
+++ b/tickleman/zombiciderocks/skins/zombicide/mission-token-widget.scss
@@ -17,9 +17,12 @@
 		}
 
 		.tokens.material {
-			right: 300px;
+			right: 315px;
+			text-align: center;
 
-			> ul > li > ul {
+			> ul > li > ul > li {
+				display: inline-block;
+				text-align: center;
 				width: 50px;
 			}
 		}
