--- a/tickleman/zombiciderocks/skins/zombicide/mission-widgets.scss
+++ b/tickleman/zombiciderocks/skins/zombicide/mission-widgets.scss
@@ -8,6 +8,10 @@
 		top: 0;
 		z-index: 2;
 
+		h2, h3 {
+			text-align: center;
+		}
+
 		> ul > li > ul {
 			display: block;
 
